--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 body {
     font-family: 'Ubuntu', sans-serif;
 }
-
+.wrap {
+    width: 100%;
+    max-width: 1212px;
+    margin: 0 auto;
+    padding-right: 15px;
+    padding-left: 15px;
+    box-sizing: border-box;
+}
 .header {
     width: 100%;
-    max-width: 1180px;
+    max-width: 1212px;
     margin: 0 auto;
     padding-right: 15px;
     padding-left: 15px;
@@ -15,13 +22,7 @@ body {
     font-weight: 700;
     padding-top: 53px;
 }
-.wrap {
-    width: 100%;
-    max-width: 1180px;
-    margin: 0 auto;
-    padding-right: 15px;
-    padding-left: 15px;
-}
+
 .nav {
     display: flex;
     list-style-type: none;
@@ -31,7 +32,7 @@ body {
 }
 
 .nav>li {
-    margin-left: 15px;
+    margin-left: 37px;
 }
 .nav>li>a {
     text-decoration: none;
@@ -44,7 +45,7 @@ body {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    padding: 10px 15px;
+    padding: 6px 14px;
     color: #fff;
     border: none; /*чтобы убрать лишние системные стили*/
     font-weight: 700;
@@ -63,14 +64,18 @@ body {
     margin-right: 20px;
 }
 .title-main {
-    font-size: 56px;
+    font-size: 55px;
     color: #202020;
     font-weight: 700;
-}
+    letter-spacing: 0.8px; 
+    margin-bottom: 0.4em;
+} 
 .text-main {
     font-size: 32px;
     line-height: 1.5;
     color: #4F4F4F;
+    min-width: 746px;
+    margin-bottom: 2em;
 }
 .logo__text {
     font-size: 24px;
@@ -84,14 +89,14 @@ body {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    padding: 10px 45px;
+    padding: 16px 59px;
     color: #fff;
     border: none; /*чтобы убрать лишние системные стили*/
     font-size: 24px;
 }
 .page {
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 85px;
+    padding-bottom: 189px;
     position: relative;
 }
 .page-top {
@@ -109,7 +114,8 @@ body {
 }
 .services {
     display: grid;
-    grid-template: 50% 50% / 50% 50%;
+    grid-template: repeat(2, 1fr) / 50% 50%;
+    grid-row-gap: 38px;
 }
 .services__item {
     display: flex;
@@ -117,19 +123,84 @@ body {
     align-items: center;
 }
 .servises__img {
-    flex-basis: 120px; 
+    flex-basis: 165px; 
     text-align: center;
 }
 .services__text {
-    flex-basis: calc(100% - 120px);
+    flex-basis: calc(80% - 165px);
 }
 .services h3 {
     font-size: 28px;
     font-weight: 400;
+    margin-bottom: 17px;
+    margin-top: 0;
 }
 .services p {
     font-size: 14px;
     font-weight: 400;
     color: #B2B2B2;
     line-height: 1.5;
+}
+.clients {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    text-align: center;
+    grid-row-gap: 40px;
+}
+.team {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 33%);
+    grid-row-gap: 44px;
+    padding-top: 20px;
+}
+.team__item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+.team__item h3 {
+    font-size: 28px;
+    color: #202020;
+    margin-bottom: 51px;
+    margin-top: 7px;
+}
+.team__item p {
+    font-size: 14px;
+    color: #b2b2b2;
+}
+.team__item img {
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-right: 25px;
+}
+.team__item>div {
+    flex-basis: calc(100% - 100px);
+}
+.footer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color:#F7F7F7;;
+}
+.social {
+    display: flex;
+    list-style-type: none;
+    padding-left: 0;
+}
+.social>li {
+    margin-left: 40px;
+}
+.social>li>a {
+    text-decoration: none;
+    color: #b2b2b2;
+    font-size: 24px;
+}
+.box-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
